--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pexels": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "recharts": "^2.12.7",
     "sort-by": "^1.2.0",
     "tiny-invariant": "^1.3.1"
